--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -119,7 +119,7 @@
                     </ListBoxItem>
                     </ListBox>
                     
-                        <TextBlock Text="Version - 21092012_2"/>
+                        <TextBlock Text="Version - 23092012_2"/>
                     </StackPanel>
                 
             </controls:PanoramaItem>
@@ -253,7 +253,7 @@
                     <StackPanel Margin="0,10" Visibility="Collapsed">
                         <TextBlock Text="Записано кроводач" TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                        <TextBlock Text="" TextWrapping="Wrap" Margin="12,-6,12,0"
+                            <TextBlock Text="{Binding Events.BloodGiveCount}" TextWrapping="Wrap" Margin="12,-6,12,0"
 						Style="{StaticResource Text24pxDF8D4B}"/>
                     </StackPanel>
 					<Button 
