--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -253,8 +253,7 @@
                     <StackPanel Margin="0,10" Visibility="Collapsed">
                         <TextBlock Text="Записано кроводач" TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                            <TextBlock Text="{Binding Events.BloodGiveCount}" TextWrapping="Wrap" Margin="12,-6,12,0"
-						Style="{StaticResource Text24pxDF8D4B}"/>
+                            <TextBlock Text="{Binding Events.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                     </StackPanel>
 					<Button 
 					FontSize="24"
