--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -122,21 +122,13 @@
 							Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                         <StackPanel Margin="0,10">
-                            <TextBlock Text="Записано кроводач" 
-							TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
-                            <TextBlock Text="" TextWrapping="Wrap" 
-							Margin="12,-6,12,0" 
-							Style="{StaticResource Text24pxDF8D4B}"/>
+                            <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
+                            <TextBlock Text="{Binding User.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>                 
                     </StackPanel>
                     <StackPanel Name="RegisterForm" Visibility="Collapsed">
                     	<ScrollViewer>
                     		<StackPanel>
-                        <!--<TextBlock Text="Логин"
-						Style="{StaticResource Text24pxCBB2A3}"/>
-                        <TextBox x:Name="login1"
-						Style="{StaticResource TextBoxStyle1}"					
-						Text="" />-->
                         <TextBlock 
 						Style="{StaticResource Text24pxCBB2A3}"
 						Text="E-mail" />
