--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -124,7 +124,14 @@
                         <StackPanel Margin="0,10">
                             <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
                             <TextBlock Text="{Binding User.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
-                        </StackPanel>                 
+                        </StackPanel>
+
+                        <StackPanel Margin="0,10">
+                            <TextBlock Text="Следующая Кроводача" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
+                            <TextBlock Text="{Binding User.NearestBloodGive}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
+                        </StackPanel>
+
+                        
                     </StackPanel>
                     <StackPanel Name="RegisterForm" Visibility="Collapsed">
                     	<ScrollViewer>
