--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -40,7 +40,7 @@
 			
 			<StackPanel Background="#FF632C00"
 			Height="116">
-			<TextBlock Text="Москва"
+			<TextBlock Text=" " Name="CityFilterText"
 			Foreground="#FFCBB2A3"
 			FontSize="34" Margin="10,0,0,0"/>
             <toolkit:AutoCompleteBox 
