--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -78,9 +78,9 @@
                 		<Border BorderThickness="0,0,0,1" 
 						BorderBrush="#FF0A6066">
                         <StackPanel Margin="10,10,10,10">
-                        	<Grid>
+                                <Grid HorizontalAlignment="Stretch">
                         		<Grid.ColumnDefinitions>
-                        			<ColumnDefinition Width="*"/>
+                        			<ColumnDefinition Width="350"/>
 									<ColumnDefinition Width="130"/>
 								</Grid.ColumnDefinitions>
                         	<StackPanel Grid.Column="0">
@@ -95,8 +95,8 @@
 							Style="{StaticResource PhoneTextSubtleStyle}"/>
 							</StackPanel>
                             <StackPanel
-							HorizontalAlignment="Right"
-							 Orientation="Horizontal" Grid.Column="1">                                
+							HorizontalAlignment="Stretch"
+							Orientation="Horizontal" Grid.Column="1">                                
                                 <TextBlock 
 								Text="{Binding Distance}" 
 								TextWrapping="NoWrap" 
