--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -49,6 +49,7 @@
 					Margin="0,15,0,0" Text="Меню" 
 					Style="{StaticResource Text48pxDFB08B}"/>
                 </controls:PanoramaItem.Header>
+                <ScrollViewer>
                 <StackPanel>
                 <ListBox ScrollViewer.VerticalScrollBarVisibility="Disabled" x:Name="mainmenu" tilteffect:TiltEffect.IsTiltEnabled="True">
                     <ListBoxItem Tap="CalendarMenuText_Tap">
@@ -118,15 +119,28 @@
 						 Tap="TextBlock_Tap_1"/>
                         </StackPanel>
                     </ListBoxItem>
-                    </ListBox>
+
+                        <ListBoxItem Tap="Qrread_Tap">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Height="64" Width="64" Source="images/ic_menu_profile_normal.png"/>
+                                <TextBlock Margin="0,15,0,0" Text="Читать QR" TextWrapping="Wrap" Style="{StaticResource Text30pxCBB2A3}"/>
+                            </StackPanel>
+                        </ListBoxItem>
+
+                            <ListBoxItem Tap="Facebook_Tap">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Height="64" Width="64" Source="images/ic_menu_profile_normal.png"/>
+                                    <TextBlock Margin="0,15,0,0" Text="Вход на Facebook" TextWrapping="Wrap" Style="{StaticResource Text30pxCBB2A3}"/>
+                                </StackPanel>
+                            </ListBoxItem>
+                    
+                        </ListBox>
                     
                         <TextBlock Text="Version - 25092012_1"/>
                     </StackPanel>
-                
+                </ScrollViewer>
             </controls:PanoramaItem>
  
-            <!--Panorama item two-->
-            <!--Use 'Orientation="Horizontal"' to enable a panel that lays out horizontally-->
             <controls:PanoramaItem>
                 <controls:PanoramaItem.Header>
                     <TextBlock Margin="0,15,0,0" Text="Планы"
