--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -110,9 +110,9 @@ Style="{StaticResource Text36pxB9A194}"/>
 						Text="{Binding Transportaion}"
 						Style="{StaticResource Text24pxDF8D4B}"/>
                         <StackPanel Name="BloodFor">
-                        <!--<TextBlock TextWrapping="Wrap" 
-						Text="Кровь для" Style="{StaticResource Text36pxB9A194}"/>
-                        <TextBlock Text="{Binding BloodFor}" Style="{StaticResource Text24pxDF8D4B}"/>-->
+                        <TextBlock TextWrapping="Wrap" 
+						Text="Кровь сдается для" Style="{StaticResource Text36pxB9A194}"/>
+                        <TextBlock Text="{Binding BloodFor}" Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
